destroying index.html with my custom built ufo

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <section class="centered">
         <div>
             <h1 class="hero__header pink__colored" data-aos="fade-right">Hello,</h1>
-            <h1 class="hero__header" data-aos="fade-left">I'm Nate.</h1>
+            <h1 class="hero__header" data-aos="fade-left">I hacked this website.</h1>
         </div>
         <img src="images/elements/png/line_short.png" alt="line" class="divider__line" data-aos="flip-left">
     </section>
     <section class="centered">
         <div>
             <h1 class="about__header" data-aos="zoom-out">
-                I'm a young
-                <span class="orange__highlight">indie game developer</span>
+                I'm a
+                <span class="orange__highlight">tech nerd with a crazy interest in hacking Nintendo's servers</span>
             </h1>
             <h1 class="about__header" data-aos="flip-down">
                 and
